# clawless-editor

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
apps/desktop/: .prettierignore  .prettierrc.json  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: git.rs  lib.rs  main.rs
apps/desktop/src/components/: DirFilterBar.tsx  Editor.tsx  FileTree.tsx  FirstRun.tsx  HelpModal.tsx  HintOverlay.tsx  KeybindingsEditor.tsx  PaneStack.tsx  Prompt.tsx  RecentList.tsx  SearchDropdown.tsx  Settings.tsx  SyncIndicator.tsx  TabStrip.tsx  WorkspaceTabs.tsx
apps/desktop/src/hooks/: useHintMode.ts  useKeybindings.ts
apps/desktop/src/lib/: archive.ts  autoReplace.ts  backend.ts  commandPaste.ts  commands.ts  daily.ts  dirFilter.ts  inlineRender.ts  keybindings.ts  rename.ts  search.ts  sync.ts  theme.ts  tree.ts  vault.ts
apps/desktop/src/lib/__tests__/: dirFilter.test.ts  inlineRender.test.ts  search.test.ts
apps/mobile/: README.md
docs/: README.md
services/backend/: .env.example  .gitignore  README.md  pyproject.toml
services/backend/clawless_backend/: archive.py  auth.py  config.py  daily.py  llm.py  main.py  rename.py
services/backend/tests/: test_daily.py  test_smoke.py
